--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,5 +22,8 @@ jobs:
           - uses: actions/checkout@v2
           - name: Checkout submodules
             run : git submodule update --init --recursive
+          - name: Grant executable permissions
+            run: chmod -R +x .
+
           - name: Run full test
             run: ./full-test.sh
